Css fixes (video embeds margin bottom + link item rtl alignment

--- a/components/00-base/03-site/_responsive-embed.scss
+++ b/components/00-base/03-site/_responsive-embed.scss
@@ -9,6 +9,14 @@
   padding: 0;
   overflow: hidden;
 
+  .un-rich-text & {
+    margin-bottom: 1rem;
+
+    @include breakpoint($screen-md-min) {
+      margin-bottom: 2rem;
+    }
+  }
+
   .embed-responsive-item,
   iframe,
   embed,
