--- a/components/02-molecules/link-item/_link-item.scss
+++ b/components/02-molecules/link-item/_link-item.scss
@@ -25,7 +25,7 @@
       flex-direction: column;
       justify-content: flex-start;
       align-items: flex-start !important;
-      text-align: left;
+      text-align: start;
 
       .link-extra {
         color: $gray;
